--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://talha-07-live.github.io/App_Home_Page/"></iframe>
+    <iframe src="https://talha-07-live.github.io/App_Home_Page/" frameborder="0"></iframe>
 </body>
 </html>
