--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     </script>
 </head>
 <body>
-    <iframe src="https://talha-07-live.github.io/App_Home_Page/" frameborder="0"></iframe>
+    <iframe src="https://talha-07-live.github.io/Channel-1/" frameborder="0"></iframe>
 </body>
 </html>
