--- a/index.html
+++ b/index.html
@@ -17,8 +17,33 @@
             border: none;
         }
     </style>
+    <script>
+        // Block new windows and tabs by overriding window.open
+        window.open = function() {
+            console.log('Blocked an attempt to open a new window or tab.');
+            return null;
+        };
+
+        // Monitor the iframe for load and try to override its window.open as well
+        function blockIframePopups() {
+            const iframe = document.querySelector('iframe');
+            if (iframe) {
+                iframe.onload = function() {
+                    const iframeWindow = iframe.contentWindow;
+                    if (iframeWindow) {
+                        iframeWindow.open = function() {
+                            console.log('Blocked an attempt to open a new window or tab from iframe.');
+                            return null;
+                        };
+                    }
+                };
+            }
+        }
+
+        window.onload = blockIframePopups;
+    </script>
 </head>
 <body>
-    <iframe src="https://talha-07-live.github.io/Channel-1/" sandbox="allow-scripts allow-same-origin"></iframe>
+    <iframe src="https://talha-07-live.github.io/Channel-1/" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox"></iframe>
 </body>
 </html>
