--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
         }
     </style>
     <script>
-        // Block new windows and tabs by overriding window.open
-        window.open = function() {
-            console.log('Blocked an attempt to open a new window or tab.');
-            return null;
-        };
-
-        // Function to block new windows/tabs within the iframe
         function blockIframePopups() {
             const iframe = document.querySelector('iframe');
             if (iframe) {
@@ -39,14 +32,33 @@
 
                         // Block clicking on links with target="_blank" within the iframe
                         const iframeDocument = iframe.contentDocument || iframeWindow.document;
-                        const links = iframeDocument.getElementsByTagName('a');
-                        for (let i = 0; i < links.length; i++) {
-                            links[i].addEventListener('click', function(e) {
-                                if (e.target.target === '_blank') {
-                                    e.preventDefault();
-                                    console.log('Blocked an attempt to open a link in a new tab.');
+                        const observer = new MutationObserver(function(mutations) {
+                            mutations.forEach(function(mutation) {
+                                if (mutation.addedNodes) {
+                                    mutation.addedNodes.forEach(function(node) {
+                                        if (node.tagName === 'A' && node.target === '_blank') {
+                                            node.target = '_self';
+                                            node.addEventListener('click', function(e) {
+                                                e.preventDefault();
+                                                console.log('Blocked an attempt to open a link in a new tab.');
+                                            });
+                                        }
+                                    });
                                 }
                             });
+                        });
+
+                        observer.observe(iframeDocument, { childList: true, subtree: true });
+
+                        const links = iframeDocument.getElementsByTagName('a');
+                        for (let i = 0; i < links.length; i++) {
+                            if (links[i].target === '_blank') {
+                                links[i].target = '_self';
+                                links[i].addEventListener('click', function(e) {
+                                    e.preventDefault();
+                                    console.log('Blocked an attempt to open a link in a new tab.');
+                                });
+                            }
                         }
                     }
                 };
