--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
     </script>
 </head>
 <body>
-    <iframe src="https://talha-07-live.github.io/Channel-1/" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox"></iframe>
+    <iframe src="https://talha-07-live.github.io/Channel-1/"></iframe>
 </body>
 </html>
