--- a/index.html
+++ b/index.html
@@ -24,26 +24,17 @@
             return null;
         };
 
-        // Monitor the iframe for load and try to override its window.open as well
         function blockIframePopups() {
             const iframe = document.querySelector('iframe');
             if (iframe) {
                 iframe.onload = function() {
                     const iframeWindow = iframe.contentWindow;
                     if (iframeWindow) {
-                        // Override window.open within the iframe
                         iframeWindow.open = function() {
                             console.log('Blocked an attempt to open a new window or tab from iframe.');
                             return null;
                         };
 
-                        // Override target="_blank" within the iframe
-                        const links = iframeWindow.document.getElementsByTagName('a');
-                        for (let i = 0; i < links.length; i++) {
-                            links[i].target = '_self';
-                        }
-
-                        // Monitor for dynamically added links
                         const observer = new MutationObserver(function(mutations) {
                             mutations.forEach(function(mutation) {
                                 if (mutation.addedNodes) {
@@ -61,6 +52,17 @@
                         });
 
                         observer.observe(iframeWindow.document, { childList: true, subtree: true });
+
+                        const links = iframeWindow.document.getElementsByTagName('a');
+                        for (let i = 0; i < links.length; i++) {
+                            if (links[i].target === '_blank') {
+                                links[i].target = '_self';
+                                links[i].addEventListener('click', function(e) {
+                                    e.preventDefault();
+                                    console.log('Blocked an attempt to open a link in a new tab.');
+                                });
+                            }
+                        }
                     }
                 };
             }
@@ -70,6 +72,6 @@
     </script>
 </head>
 <body>
-    <iframe src="https://talha-07-live.github.io/Channel-1/"></iframe>
+    <iframe src="https://idn.gdplayertv.to/embed/astro-cricket/?embed=1&autoplay=1&mute=1&quality=low" sandbox="allow-scripts allow-same-origin"></iframe>
 </body>
 </html>
