--- a/index.html
+++ b/index.html
@@ -18,27 +18,30 @@
         }
     </style>
     <script>
-        // Block specific URLs from opening in new tabs/windows
+        // Function to block specific URLs from opening in new tabs/windows
         function blockSpecificLinks() {
-            document.addEventListener('DOMContentLoaded', function() {
-                const links = document.querySelectorAll('a');
-                links.forEach(function(link) {
-                    link.addEventListener('click', function(e) {
-                        if (link.href === 'https://zq.shallalflexors.top/' || link.href === 'https://pw.avowsbethorn.top/') {
-                            e.preventDefault();
-                            console.log('Blocked an attempt to open a restricted link in a new tab:', link.href);
-                        }
-                    });
-                });
-            });
+            const iframe = document.querySelector('iframe');
+            if (iframe) {
+                iframe.onload = function() {
+                    const iframeWindow = iframe.contentWindow;
+                    if (iframeWindow) {
+                        // Override click event within the iframe's document
+                        iframeWindow.document.addEventListener('click', function(e) {
+                            if (e.target.tagName === 'A' && e.target.href &&
+                                (e.target.href === 'https://zq.shallalflexors.top/' || e.target.href === 'https://pw.avowsbethorn.top/')) {
+                                e.preventDefault();
+                                console.log('Blocked an attempt to open a restricted link in the iframe:', e.target.href);
+                            }
+                        });
+                    }
+                };
+            }
         }
+
+        window.onload = blockSpecificLinks;
     </script>
 </head>
 <body>
     <iframe src="https://talha-07-live.github.io/App_Home_Page/"></iframe>
-
-    <script>
-        blockSpecificLinks();
-    </script>
 </body>
 </html>
