--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </script>
 </head>
 <body>
-    <iframe src="https://talha-07-live.github.io/App_Home_Page/"></iframe>
+    <iframe src="https://talha-07-live.github.io/Channel-1/"></iframe>
 </body>
 </html>
