--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
     </script>
 </head>
 <body>
-    <iframe src="https://talha-07-live.github.io/Channel-1/"></iframe>
+    <iframe src="https://en.gdplayertv.to/embed/astro-cricket/?embed=1&autoplay=1&mute=1&quality=low"></iframe>
 </body>
 </html>
