--- a/index.html
+++ b/index.html
@@ -3,29 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad Block Example</title>
+    <title>Video Embed with Controls</title>
+    <style>
+        .video-container {
+            position: relative;
+            width: 100%;
+            max-width: 800px;
+            margin: auto;
+        }
+
+        iframe {
+            width: 100%;
+            height: 450px;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .buttons {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
+        }
+
+        .buttons button {
+            margin: 0 5px;
+            padding: 10px;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-    <iframe id="iframe-id" src="https://idn.gdplayertv.to/embed/supersport-cricket/?embed=1&autoplay=1&mute=1&quality=low" width="600" height="400"></iframe>
+    <div class="video-container">
+        <iframe src="https://en.gdplayertv.to/embed/astro-cricket/?embed=1&autoplay=1&mute=1&quality=low" frameborder="0" allow="autoplay; fullscreen"></iframe>
+        <div class="overlay">
+            <div class="buttons">
+                <button onclick="unmuteVideo()">Unmute</button>
+                <button onclick="fullscreenVideo()">Fullscreen</button>
+            </div>
+        </div>
+    </div>
 
     <script>
-        document.getElementById('iframe-id').onload = function() {
-            var iframe = document.getElementById('iframe-id');
-            try {
-                var iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+        function unmuteVideo() {
+            const iframe = document.querySelector('iframe');
+            const iframeSrc = iframe.src;
+            iframe.src = iframeSrc.replace('mute=1', 'mute=0');
+        }
 
-                // Use CSS to hide elements identified as ads
-                var style = document.createElement('style');
-                style.innerHTML = `
-                    .ad-class, #ad-id { /* Replace these with the actual classes or IDs of the ads */
-                        display: none !important;
-                    }
-                `;
-                iframeDoc.head.appendChild(style);
-            } catch (e) {
-                console.error("Could not access the iframe content due to cross-origin restrictions.");
+        function fullscreenVideo() {
+            const iframe = document.querySelector('iframe');
+            if (iframe.requestFullscreen) {
+                iframe.requestFullscreen();
+            } else if (iframe.mozRequestFullScreen) { // Firefox
+                iframe.mozRequestFullScreen();
+            } else if (iframe.webkitRequestFullscreen) { // Chrome, Safari and Opera
+                iframe.webkitRequestFullscreen();
+            } else if (iframe.msRequestFullscreen) { // IE/Edge
+                iframe.msRequestFullscreen();
             }
-        };
+        }
     </script>
 </body>
 </html>
