--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Embed with Controls</title>
+    <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet">
     <style>
         .video-container {
             position: relative;
@@ -11,24 +12,6 @@
             max-width: 800px;
             margin: auto;
         }
-
-        iframe {
-            width: 100%;
-            height: 450px;
-        }
-
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
         .buttons {
             position: absolute;
             bottom: 10px;
@@ -36,7 +19,6 @@
             transform: translateX(-50%);
             z-index: 1;
         }
-
         .buttons button {
             margin: 0 5px;
             padding: 10px;
@@ -46,32 +28,22 @@
 </head>
 <body>
     <div class="video-container">
-        <iframe id="videoIframe" src="https://en.gdplayertv.to/embed/astro-cricket/?embed=1&autoplay=1&mute=1&quality=low" frameborder="0" allow="autoplay; fullscreen"></iframe>
-        <div class="overlay">
-            <div class="buttons">
-                <button onclick="unmuteVideo()">Unmute</button>
-                <button onclick="fullscreenVideo()">Fullscreen</button>
-            </div>
+        <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" width="100%" height="450">
+            <source src="YOUR_VIDEO_SOURCE.mp4" type="video/mp4">
+        </video>
+        <div class="buttons">
+            <button onclick="unmuteVideo()">Unmute</button>
+            <button onclick="fullscreenVideo()">Fullscreen</button>
         </div>
     </div>
-
+    <script src="https://vjs.zencdn.net/7.17.0/video.js"></script>
     <script>
+        const player = videojs('videoPlayer');
         function unmuteVideo() {
-            const iframe = document.getElementById('videoIframe').contentWindow;
-            iframe.postMessage('unmute', '*');
+            player.muted(false);
         }
-
         function fullscreenVideo() {
-            const iframe = document.getElementById('videoIframe');
-            if (iframe.requestFullscreen) {
-                iframe.requestFullscreen();
-            } else if (iframe.mozRequestFullScreen) { // Firefox
-                iframe.mozRequestFullScreen();
-            } else if (iframe.webkitRequestFullscreen) { // Chrome, Safari and Opera
-                iframe.webkitRequestFullscreen();
-            } else if (iframe.msRequestFullscreen) { // IE/Edge
-                iframe.msRequestFullscreen();
-            }
+            player.requestFullscreen();
         }
     </script>
 </body>
