--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <div class="video-container">
         <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" width="100%" height="450">
-            <source src="YOUR_VIDEO_SOURCE.mp4" type="video/mp4">
+            <source src="https://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
         </video>
         <div class="buttons">
             <button onclick="unmuteVideo()">Unmute</button>
