--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Embed with Controls</title>
-    <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet">
     <style>
         .video-container {
             position: relative;
@@ -12,12 +11,29 @@
             max-width: 800px;
             margin: auto;
         }
+        iframe {
+            width: 100%;
+            height: 450px;
+        }
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            pointer-events: none; /* Allow clicks to pass through to iframe */
+        }
         .buttons {
             position: absolute;
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 1;
+            pointer-events: auto; /* Enable interaction with buttons */
         }
         .buttons button {
             margin: 0 5px;
@@ -28,22 +44,36 @@
 </head>
 <body>
     <div class="video-container">
-        <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" width="100%" height="450">
-            <source src="https://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
-        </video>
+        <iframe id="videoIframe" src="https://en.gdplayertv.to/embed/astro-cricket/?embed=1&autoplay=1&mute=1&quality=low" frameborder="0" allow="autoplay; fullscreen"></iframe>
+        <div class="overlay"></div>
         <div class="buttons">
             <button onclick="unmuteVideo()">Unmute</button>
             <button onclick="fullscreenVideo()">Fullscreen</button>
         </div>
     </div>
-    <script src="https://vjs.zencdn.net/7.17.0/video.js"></script>
+
     <script>
-        const player = videojs('videoPlayer');
         function unmuteVideo() {
-            player.muted(false);
+            const iframe = document.getElementById('videoIframe');
+            const iframeSrc = iframe.src;
+            if (iframeSrc.includes('mute=1')) {
+                iframe.src = iframeSrc.replace('mute=1', 'mute=0');
+            } else {
+                iframe.src = iframeSrc + '&mute=0';
+            }
         }
+
         function fullscreenVideo() {
-            player.requestFullscreen();
+            const iframe = document.getElementById('videoIframe');
+            if (iframe.requestFullscreen) {
+                iframe.requestFullscreen();
+            } else if (iframe.mozRequestFullScreen) { // Firefox
+                iframe.mozRequestFullScreen();
+            } else if (iframe.webkitRequestFullscreen) { // Chrome, Safari and Opera
+                iframe.webkitRequestFullscreen();
+            } else if (iframe.msRequestFullscreen) { // IE/Edge
+                iframe.msRequestFullscreen();
+            }
         }
     </script>
 </body>
