--- a/index.html
+++ b/index.html
@@ -3,51 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Embed with Controls</title>
+    <title>Button with Image Links</title>
     <style>
-        .video-container {
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #111; /* Dark background color */
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            align-items: center;
             position: relative;
-            width: 100%;
-            max-width: 800px;
-            margin: auto;
         }
-        iframe {
-            width: 100%;
-            height: 450px;
+        .button-with-image {
+            display: inline-block;
+            text-align: center;
+            color: #fff; /* Text color */
+            font-size: 13px;
+            text-decoration: none;
+            position: relative;
+            overflow: hidden;
+            border-radius: 30px; /* Rounded corners */
+            background-color: rgba(255, 255, 255, 0.1); /* Light background color */
+            transition: background-color 0.3s ease;
+            width: 200px; /* Adjust button width */
+            height: 200px; /* Adjust button height */
+            box-shadow: 0 0 25px rgba(255, 255, 255, 0.5); /* Reduced glow effect */
         }
-        .buttons {
+        .button-with-image:hover {
+            background-color: rgba(255, 255, 255, 0.2); /* Darker background color on hover */
+        }
+        .button-with-image img {
+            display: block;
+            width: 100%;
+            height: auto;
+            border-radius: 30px; /* Match button radius */
+        }
+        .button-with-image span {
             position: absolute;
-            bottom: 10px;
+            top: 90%;
             left: 50%;
-            transform: translateX(-50%);
+            transform: translate(-50%, -50%);
             z-index: 1;
         }
-        .buttons button {
-            margin: 0 5px;
-            padding: 10px;
+        .android-app-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #0f0; /* Green background */
+            border-radius: 50%; /* Round shape */
+            width: 60px;
+            height: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: #000; /* Text color */
+            font-weight: bold;
             font-size: 16px;
+            box-shadow: 0 0 15px rgba(0, 255, 0, 0.5); /* Glow effect */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .android-app-button:hover {
+            transform: scale(1.1); /* Slightly increase size on hover */
+            box-shadow: 0 0 25px rgba(0, 255, 0, 0.7); /* Increase glow on hover */
         }
     </style>
 </head>
 <body>
-    <div class="video-container">
-        <iframe id="videoIframe" src="https://en.gdplayertv.to/embed/astro-cricket/?embed=1&autoplay=1&mute=1&quality=low" frameborder="0" allow="autoplay; fullscreen"></iframe>
-        <div class="buttons">
-            <button onclick="simulateUnmuteClick()">Unmute</button>
-        </div>
+    <div class="button-container">
+        <a href="https://talha-07-live.github.io/Talha_App_Cricket/" class="button-with-image">
+            <img src="https://s12.gifyu.com/images/StN9A.gif" alt="Button 1 Image">
+            <span>All Types Cricket Match Live</span>
+        </a>
+        <a href="https://talha-07-live.github.io/Talha-s_App_Football_1/" class="button-with-image">
+            <img src="https://s10.gifyu.com/images/StT3e.gif" alt="Button 2 Image">
+            <span>Copa America Live</span>
+        </a>
+        <a href="https://talha-07-live.github.io/Talha-s_App_Football_2/" class="button-with-image">
+            <img src="https://s10.gifyu.com/images/StTRx.gif" alt="Button 3 Image">
+            <span>UEFA EURO Cup Live</span>
+        </a>
     </div>
-
-    <script>
-        function simulateUnmuteClick() {
-            const iframe = document.getElementById('videoIframe');
-            const unmuteButton = iframe.contentDocument.querySelector('your-unmute-button-selector');
-            
-            if (unmuteButton) {
-                unmuteButton.click(); // Simulate click on the unmute button
-            } else {
-                console.error('Unmute button not found within the iframe.');
-            }
-        }
-    </script>
+    <a href="https://example.com/android-app-link" class="android-app-button" target="_blank">
+        Android App
+    </a>
 </body>
 </html>
