--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             right: 20px;
             background-color: #0f0; /* Green background */
             border-radius: 50%; /* Round shape */
-            width: 60px;
-            height: 60px;
+            width: 80px; /* Increase width */
+            height: 80px; /* Increase height */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -69,10 +69,23 @@
             font-size: 16px;
             box-shadow: 0 0 15px rgba(0, 255, 0, 0.5); /* Glow effect */
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            animation: bounce 2s infinite; /* Bounce animation */
         }
         .android-app-button:hover {
             transform: scale(1.1); /* Slightly increase size on hover */
             box-shadow: 0 0 25px rgba(0, 255, 0, 0.7); /* Increase glow on hover */
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-15px);
+            }
+            60% {
+                transform: translateY(-7px);
+            }
         }
     </style>
 </head>
