--- a/index.html
+++ b/index.html
@@ -56,24 +56,25 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #0f0; /* Green background */
+            background-color: #004080; /* Dark blue background */
             border-radius: 50%; /* Round shape */
-            width: 80px; /* Increase width */
-            height: 80px; /* Increase height */
+            width: 80px; /* Button width */
+            height: 80px; /* Button height */
             display: flex;
             justify-content: center;
             align-items: center;
             text-decoration: none;
-            color: #000; /* Text color */
+            color: #fff; /* White text color */
             font-weight: bold;
             font-size: 16px;
-            box-shadow: 0 0 15px rgba(0, 255, 0, 0.5); /* Glow effect */
+            box-shadow: 0 0 15px rgba(0, 64, 128, 0.5); /* Blue glow effect */
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             animation: bounce 2s infinite; /* Bounce animation */
+            text-align: center;
         }
         .android-app-button:hover {
             transform: scale(1.1); /* Slightly increase size on hover */
-            box-shadow: 0 0 25px rgba(0, 255, 0, 0.7); /* Increase glow on hover */
+            box-shadow: 0 0 25px rgba(0, 64, 128, 0.7); /* Increase glow on hover */
         }
 
         @keyframes bounce {
