--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img src="https://s10.gifyu.com/images/StTRx.gif" alt="Loading GIF">
+        <img src="https://s12.gifyu.com/images/S5qs3.gif" alt="Loading GIF">
     </div>
     <div class="button-container" id="main-content">
         <a href="https://t.talhasstream-cricket.000.pe/" class="button-with-image">
