--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             height: 100vh;
             width: 100vw;
             background-color: #111;
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             z-index: 9999;
@@ -104,7 +104,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img src="https://s12.gifyu.com/images/S5qs3.gif" alt="Loading GIF">
+        <img src="https://s12.gifyu.com/images/S5qs3.gif" alt="Loading GIF" style="width: 100%; height: 100%;">
     </div>
     <div class="button-container" id="main-content">
         <a href="https://t.talhasstream-cricket.000.pe/" class="button-with-image">
@@ -132,5 +132,7 @@
             document.getElementById('android-app-button').style.display = 'flex';
         }, 3000);
     </script>
+</body>
+</html>
 </body>
 </html>
