--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             position: absolute;
             top: 10%;
             left: 50%;
-            transform: translate(-50%, -10%);
+            transform: translate(-50%, -20%);
             width: 80%; /* Adjust size if needed */
             height: auto;
         }
@@ -112,7 +112,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img src="images/images.gif" alt="Loading GIF">
+        <img src="https://s10.gifyu.com/images/S5qNn.gif" alt="Loading GIF">
     </div>
     <div class="button-container" id="main-content">
         <a href="https://t.talhasstream-cricket.000.pe/" class="button-with-image">
